force-app/main/default/objects/bpats__Interview__c/fields/bpats__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>bpats__Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>