force-app/main/default/objects/bpats__Interview__c/fields/bpats__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>bpats__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>