force-app/main/default/objects/bpats__Interview__c/fields/bpats__ATS_Applicant__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATS Applicant</label>
    <referenceTo>bpats__ATS_Applicant__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>