force-app/main/default/objects/bpats__Interview__c/fields/bpats__Candidate__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews (Candidate)</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>