force-app/main/default/objects/bpats__Interview__c/fields/bpats__Candidate_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate_Name__c</fullName>
    <description>Candidate Name</description>
    <formula>bpats__Candidate__r.FirstName + &apos; &apos; +  bpats__Candidate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate Name</label>
    <type>Text</type>
</CustomField>