force-app/main/default/objects/bpats__Interview__c/fields/bpats__Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>bpats__Duration_Minutes__c</fullName>
    <label>Duration</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>