force-app/main/default/objects/bpats__Interview__c/fields/bpats__Event_Id__c.field-meta.xml
<CustomField>
    <fullName>bpats__Event_Id__c</fullName>
    <label>Event Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>