force-app/main/default/objects/bpats__Interview__c/fields/bpats__Feedback__c.field-meta.xml
<CustomField>
    <fullName>bpats__Feedback__c</fullName>
    <label>Feedback</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>