force-app/main/default/objects/bpats__Interview__c/fields/bpats__Interview_Description__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Description__c</fullName>
    <description>This field is used for capturing Description of the Interview</description>
    <label>Interview Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>