force-app/main/default/objects/bpats__Interview__c/fields/bpats__Interview_Template__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interview_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Template</label>
    <referenceTo>bpats__Interview_Template__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>