force-app/main/default/objects/bpats__Interview__c/fields/bpats__Interviewer__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Interviews (Interviewer)</relationshipLabel>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>