force-app/main/default/objects/bpats__Interview__c/fields/bpats__Interviewers__c.field-meta.xml
<CustomField>
    <fullName>bpats__Interviewers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewers</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>