force-app/main/default/objects/bpats__Interview__c/fields/bpats__Job_Position__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Position__c</fullName>
    <description>Job Position</description>
    <formula>bpats__Job__r.bpats__Job_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Position</label>
    <type>Text</type>
</CustomField>