force-app/main/default/objects/bpats__Interview__c/fields/bpats__Status__c.field-meta.xml
<CustomField>
    <fullName>bpats__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Pending Feedback</fullName>
            </value>
            <value>
                <fullName>Feedback Provided</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>