force-app/main/default/objects/bpats__Interview__c/validationRules/bpats__Check_For_Interview_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>bpats__Check_For_Interview_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISNEW()), ISCHANGED(bpats__Interview_Date__c), PRIORVALUE(bpats__Interview_Date__c) &lt; NOW() )</errorConditionFormula>
    <errorMessage>Interview Date/Time cannot be changed</errorMessage>
</ValidationRule>