force-app/main/default/objects/bpats__Interview__c/listViews/bpats__All.listView-meta.xml
<ListView>
    <fullName>bpats__All</fullName>
    <columns>NAME</columns>
    <columns>bpats__ATS_Applicant__c</columns>
    <columns>bpats__Interview_Date__c</columns>
    <columns>bpats__Job__c</columns>
    <columns>Job_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>